@@ -2984,7 +2984,8 @@ cupsdWritePrintcap(void)
   * data has come from...
   */
 
-  cupsFilePuts(fp, "# This file was automatically generated by cupsd(8) from the\n");
+  cupsFilePuts(fp,
+               "# This file was automatically generated by cupsd(8) from the\n");
   cupsFilePrintf(fp, "# %s/printers.conf file.  All changes to this file\n",
                  ServerRoot);
   cupsFilePuts(fp, "# will be lost.\n");
@@ -3010,14 +3011,15 @@ cupsdWritePrintcap(void)
 
           if (DefaultPrinter)
 	    cupsFilePrintf(fp, "%s|%s:rm=%s:rp=%s:\n", DefaultPrinter->name,
-	            DefaultPrinter->info, ServerName, DefaultPrinter->name);
+	                   DefaultPrinter->info, ServerName,
+			   DefaultPrinter->name);
 
 	  for (p = (cupsd_printer_t *)cupsArrayFirst(Printers);
 	       p;
 	       p = (cupsd_printer_t *)cupsArrayNext(Printers))
 	    if (p != DefaultPrinter)
 	      cupsFilePrintf(fp, "%s|%s:rm=%s:rp=%s:\n", p->name, p->info,
-	              ServerName, p->name);
+	                     ServerName, p->name);
           break;
 
       case PRINTCAP_SOLARIS:
@@ -3055,9 +3057,10 @@ cupsdWritePrintcap(void)
 	       p;
 	       p = (cupsd_printer_t *)cupsArrayNext(Printers))
 	    cupsFilePrintf(fp, "%s:\\\n"
-	        	"\t:bsdaddr=%s,%s:\\\n"
-			"\t:description=%s:\n",
-		    p->name, ServerName, p->name, p->info ? p->info : "");
+	        	       "\t:bsdaddr=%s,%s:\\\n"
+			       "\t:description=%s:\n",
+		           p->name, ServerName, p->name,
+			   p->info ? p->info : "");
           break;
     }
   }
